fix authorization and retrieving data